--- a/frondendcajero/package.json
+++ b/frondendcajero/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.10.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.15",
     "tslib": "^2.3.0",
